# InternetRadio

./: .gitignore  KlientInfo.cpp  KlientInfo.h  KlientTest.cpp  README.md  RadioServer.cpp  RoomInfo.h  Server.cpp  Server.h  Server.hpp  makefile  rooms.txt
Klient/Client/: CMakeCache.txt  CMakeLists.txt  Client  Client.cbp  Makefile  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui
Klient/Client/Client_autogen/: moc_predefs.h
Klient/build-Client-Desktop-Debug/: CMakeCache.txt  Client  Client.cbp  Makefile  cmake_install.cmake
Klient/build-Client-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-76cdd988a2bfb735831a.json  cache-v2-f339516b812e8b5f105e.json  cmakeFiles-v1-152505bbe52937929120.json  cmakeFiles-v1-4a3827e23c6d349796f8.json  codemodel-v2-d36e09ea70d3a2860f67.json  codemodel-v2-febd1498ecfd211c6e2c.json  index-2020-12-28T20-59-12-0144.json  index-2020-12-29T22-47-04-0847.json  target-Client-Debug-527ecf01533b44af0b08.json  target-Client-Debug-6bd7177f0d76876120ad.json  target-Client_autogen-Debug-78113b181dbc10aa33c9.json
Klient/build-Client-Desktop-Debug/Client_autogen/include/: ui_mainwindow.h
Serwer/: KlientInfo.cpp  KlientInfo.h  Queue.cpp  Queue.h  RadioServer.cpp  RoomInfo.cpp  RoomInfo.h  Server.cpp  Server.h
